Overflow code corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.74);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .second-bg {
   background-color: #fafafa;
